-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: OpenJDK6, openjdk7u, 8u91, 9
-
Component/s: hotspot
-
Environment:
Zero
-
b120
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8163627 | 8u121 | Andrew Haley | P4 | Resolved | Fixed | b01 |
| JDK-8155066 | 8u112 | Andrew Haley | P4 | Resolved | Fixed | b01 |
| JDK-8167734 | emb-8u121 | Andrew Haley | P4 | Resolved | Fixed | b01 |
| JDK-8155130 | openjdk7u | Andrew Haley | P4 | Resolved | Fixed | master |
After the JDK8u security patches got merged with 8u91 a Zero build of jdk8u crashes on java -version (caused by bad jump table).
./build/linux-x86_64-normal-zero-release/images/j2sdk-image/bin/java -version
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (os_linux_zero.cpp:254), pid=30205, tid=0x00007f877c96a700
# fatal error: caught unhandled signal 11
#
# JRE version: (8.0) (build )
# Java VM: OpenJDK 64-Bit Zero VM (25.71-b00 interpreted mode linux-amd64 )
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/sgehwolf/Documents/openjdk/upstream-sources/openjdk8u-dev/hs_err_pid30205.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Aborted (core dumped)
In addition to that, on 64 bit systems (big endian) we are seeing the following issue on java -version:
Error occurred during initialization of VM
java.lang.ExceptionInInitializerError
at java.lang.ref.Reference.<clinit>(Reference.java:235)
Caused by: java.lang.SecurityException: Unsafe
at sun.misc.Unsafe.getUnsafe(Unsafe.java:90)
at sun.misc.SharedSecrets.<clinit>(SharedSecrets.java:46)
at java.lang.ref.Reference.<clinit>(Reference.java:235)
./build/linux-x86_64-normal-zero-release/images/j2sdk-image/bin/java -version
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (os_linux_zero.cpp:254), pid=30205, tid=0x00007f877c96a700
# fatal error: caught unhandled signal 11
#
# JRE version: (8.0) (build )
# Java VM: OpenJDK 64-Bit Zero VM (25.71-b00 interpreted mode linux-amd64 )
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/sgehwolf/Documents/openjdk/upstream-sources/openjdk8u-dev/hs_err_pid30205.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Aborted (core dumped)
In addition to that, on 64 bit systems (big endian) we are seeing the following issue on java -version:
Error occurred during initialization of VM
java.lang.ExceptionInInitializerError
at java.lang.ref.Reference.<clinit>(Reference.java:235)
Caused by: java.lang.SecurityException: Unsafe
at sun.misc.Unsafe.getUnsafe(Unsafe.java:90)
at sun.misc.SharedSecrets.<clinit>(SharedSecrets.java:46)
at java.lang.ref.Reference.<clinit>(Reference.java:235)
- backported by
-
JDK-8155066 Zero: Better byte behaviour
-
- Resolved
-
-
JDK-8155130 Zero: Better byte behaviour
-
- Resolved
-
-
JDK-8163627 Zero: Better byte behaviour
-
- Resolved
-
-
JDK-8167734 Zero: Better byte behaviour
-
- Resolved
-